tests/cases/smoke/invalid/error_catch_all_not_last.ty
record FileError {
    path: str
    reason: str
}

try {
    print("x")
} catch any {
    print("fallback")
} catch err: FileError {
    print(err.reason)
}
